--- a/index.html
+++ b/index.html
@@ -1,6 +1,28 @@
 <main>
-  <header></header>
-  <nav></nav>
+  <header>
+    <h1>Header and company Logo</h1>
+  </header>
+  <nav>
+    <ul>
+      <li>
+        <a href="#">
+        Home
+        </a> </li>
+      <li>
+        <a href="#">
+          About
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          Contact Us
+        </a>
+      </li>
+      <li>
+        <a href="#">Business Goals</a>
+      </li>
+    </ul>
+  </nav>
   <section></section>
   <footer></footer>
 </main>
