--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
       </li>
     </ul>
   </nav>
-  <section></section>
-  <footer></footer>
+  <section>
+
+  </section>
+  <footer>
+    <ul>
+      <li>copy</li>
+      <li>footer items</li>
+      <li>inline</li>
+    </ul>
+  </footer>
 </main>
