--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </li>
       <li>
         <a href="#">
-          Contact Us
+          Contact Us  Contact Us  Contact Us  Contact Us  Contact Us Contact Us Contact Us Contact Us Contact Us Contact Us Contact Us Contact Us Contact Us
         </a>
       </li>
       <li>
@@ -24,7 +24,9 @@
     </ul>
   </nav>
   <section>
-
+<p>
+  Contact Us  Contact Us  Contact Us  Contact Us  Contact Us Contact Us Contact Us Contact Us Contact Us Contact Us Contact Us Contact Us Contact Us
+</p>
   </section>
   <footer>
     <ul>
